@@ -1,6 +1,7 @@
 package com.piedpiper.bolt.parser;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -16,102 +17,81 @@ import lombok.RequiredArgsConstructor;
 @Data
 public class AbstractSyntaxTree {
     private String label;
-    private Token token;
+    private TokenType name = null;
+    private String value = "";
+    private Integer lineNumber = 0;
     private List<AbstractSyntaxTree> children = new ArrayList<>();
 
     public AbstractSyntaxTree(String label) {
         this.label = label;
-        this.token = null;
+    }
+
+    public AbstractSyntaxTree(String label, int lineNumber) {
+        this.label = label;
+        this.lineNumber = lineNumber;
     }
 
     public AbstractSyntaxTree(String label, List<AbstractSyntaxTree> children) {
         this.label = label;
-        this.token = null;
         this.children.addAll(children); // setting this.children = children causes the list to become immutable
+    }
+
+    public AbstractSyntaxTree(String label, int lineNumber, List<AbstractSyntaxTree> children) {
+        this.label = label;
+        this.lineNumber = lineNumber;
+        this.children.addAll(children); // setting this.children = children causes the list to become immutable
+    }
+
+    public AbstractSyntaxTree(String label, Token... children) {
+        this.label = label;
+        this.children.addAll(tokensToNodes(children));
+    }
+
+    public AbstractSyntaxTree(String label, int lineNumber, Token... children) {
+        this.label = label;
+        this.lineNumber = lineNumber;
+        this.children.addAll(tokensToNodes(children));
     }
 
     public AbstractSyntaxTree(Token token) {
         this.label = "terminal";
-        this.token = token;
-    }
-
-    public TokenType getName() {
-        if (token == null)
-            return null;
-        return token.getName();
-    }
-
-    public String getValue() {
-        if (token == null)
-            return null;
-        return token.getValue();
-    }
-
-    public int getLineNumber() {
-        if (token == null)
-            return 0;
-        return token.getLineNumber();
+        this.name = token.getName();
+        if (token instanceof VariableToken)
+            this.value = token.getValue();
+        this.lineNumber = token.getLineNumber();
     }
 
     public AbstractSyntaxTree(String label, Token token) {
         this.label = label;
-        this.token = null;
         this.children.add(new AbstractSyntaxTree(token));
     }
 
     public AbstractSyntaxTree(Token token, List<AbstractSyntaxTree> children) {
         this.label = "terminal";
-        this.token = token;
+        this.name = token.getName();
+        if (token instanceof VariableToken)
+            this.value = token.getValue();
         this.children.addAll(children);
     }
 
-    public static List<AbstractSyntaxTree> tokensToNodes(List<Token> tokens) {
-        return tokens.stream().map(AbstractSyntaxTree::new).collect(Collectors.toList());
+    public AbstractSyntaxTree(Token... tokens) { // the first element becomes the parent of the rest of the tokens
+        this(tokens[0], tokensToNodes(Arrays.copyOfRange(tokens, 1, tokens.length)));
     }
 
-    // go in sequential order of parents and created nested tree nodes; the last node contains tree
-    public static AbstractSyntaxTree createNestedTree(AbstractSyntaxTree tree, String... parents) {
-        if (parents.length == 1)
-            return new AbstractSyntaxTree(parents[0], List.of(tree));
-
-        AbstractSyntaxTree root = new AbstractSyntaxTree(parents[0]);
-        int end = parents.length - 1;
-        AbstractSyntaxTree node = root;
-        AbstractSyntaxTree subTree;
-        for (int i = 1; i < end; i++) {
-            subTree = new AbstractSyntaxTree(parents[i]);
-            node.appendChildren(subTree);
-            node = subTree;
-        }
-        node.appendChildren(
-            new AbstractSyntaxTree(parents[end], List.of(tree))
-        );
-        return root;
+    public static List<AbstractSyntaxTree> tokensToNodes(Token[] tokens) {
+        return Arrays.asList(tokens).stream().map(AbstractSyntaxTree::new).collect(Collectors.toList());
     }
 
-    // go in sequential order of parents and created nested tree nodes; the last node contains token
-    public static AbstractSyntaxTree createNestedTree(Token token, String...parents) {
-        return createNestedTree(new AbstractSyntaxTree(token), parents);
+    public TokenType getName() {
+        return name;
     }
 
-    // go in sequential order of parents and created nested tree nodes; the last node contains tokens
-    public static AbstractSyntaxTree createNestedTree(List<Token> tokens, String... parents) {
-        if (parents.length == 1)
-            return new AbstractSyntaxTree(parents[0], tokensToNodes(tokens));
-        
-        AbstractSyntaxTree root = new AbstractSyntaxTree(parents[0]);
-        int end = parents.length - 1;
-        AbstractSyntaxTree node = root;
-        AbstractSyntaxTree subTree;
-        for (int i = 1; i < end; i++) {
-            subTree = new AbstractSyntaxTree(parents[i]);
-            node.appendChildren(subTree);
-            node = subTree;
-        }
-        node.appendChildren(
-            new AbstractSyntaxTree(parents[end], tokensToNodes(tokens))
-        );
-        return root;
+    public String getValue() {
+        return value;
+    }
+
+    public int getLineNumber() {
+        return lineNumber;
     }
 
     public void appendChildren(AbstractSyntaxTree... children) {
@@ -119,19 +99,13 @@ public class AbstractSyntaxTree {
     }
 
     public boolean hasChildren() {
-        return !this.children.isEmpty();
+        return !children.isEmpty();
     }
 
-    public int approximateLineNumber() {
-        // TODO: make this more efficient by limiting recursion or change how parser does this
-        // in the future, may, possibly pass in the parent node
-        if (token == null) {
-            if (this.hasChildren())
-                return children.get(0).approximateLineNumber();
-            else
-                return 0;
-        }
-        return token.getLineNumber();
+    public int countChildren() {
+        if (!hasChildren())
+            return 0;
+        return children.size();
     }
 
     @Override
@@ -143,15 +117,15 @@ public class AbstractSyntaxTree {
         String indentation = getNestedIndentation(indentLevel);
         StringBuilder output = new StringBuilder(indentation + "AST => ");
         if (label.equals("terminal")) {
-            output.append("Token: ").append(token.getName());
-            if (token instanceof VariableToken)
-                output.append(" ('").append(token.getValue()).append("')");
-            if (token.getLineNumber() != 0)
-                output.append(", line: ").append(token.getLineNumber());
+            output.append("Token: ").append(name);
+            if (!value.equals(""))
+                output.append(" ('").append(value).append("')");
         }
         else {
             output.append(label);
         }
+        if (lineNumber != 0)
+                output.append(", line: ").append(lineNumber);
         if (!children.isEmpty()) {
             output.append(", children: [");
             for (AbstractSyntaxTree child : children) {
